fix bug where post content would overflow container

--- a/src/components/Post/PostView/PostContent/PostContent.css
+++ b/src/components/Post/PostView/PostContent/PostContent.css
@@ -1,3 +1,4 @@
 .PostContent {
   padding-bottom: 1rem;
+  word-wrap: break-word;
 }
